--- a/portal_noticias/app/views/admin/form_add_noticia.ejs
+++ b/portal_noticias/app/views/admin/form_add_noticia.ejs
@@ -13,6 +13,19 @@
 			<input type="text" id="titulo" name="titulo" placeholder="Titulo Da Noticia">
 			<br/>
 
+			<label>Resumo</label>
+			<input type="text" id="resumo" name="resumo" placeholder="Resumo da Noticia">
+			<br/>
+
+			<label>Nome autor</label>
+			<input type="text" id="autor" name="autor" placeholder="Autor da Noticia">
+			<br/>
+
+			
+			<label>Data Dos Fatos</label>
+			<input type="date" id="data_noticia" name="data_noticia" placeholder="Autor da Noticia">
+			<br/>
+
 			<label>Noticia</label>
 			<textarea id="noticia" name="noticia" rows="5" cols="30"></textarea>
 			<br/>
