--- a/portal_noticias/app/views/admin/form_add_noticia.ejs
+++ b/portal_noticias/app/views/admin/form_add_noticia.ejs
@@ -8,6 +8,16 @@
 
 		<h1>Adicionar noticia</h1>
 
+		<% if(validacao) { %>
+			<ul>
+				<% for(var i = 0; i < validacao.length; i++) { %>
+					<li>
+						<%= validacao[i].msg %>
+					</li>
+				<% } %>
+			</ul>
+		<% } %>
+
 		<form action="/noticias/salvar" method="POST">
 			<label>Titulo</label>
 			<input type="text" id="titulo" name="titulo" placeholder="Titulo Da Noticia">
