--- a/multirom_chat/app/views/chat.ejs
+++ b/multirom_chat/app/views/chat.ejs
@@ -72,7 +72,6 @@
             <div class="row conversa" id="conversa">
 				<div class="col-md-1"></div>
 				<div class="col-md-10" id="dialogos">
-
 				</div>
 				<div class="col-md-1"></div>
                 
@@ -104,35 +103,44 @@
 		<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
 			<div class="container">
 				<div class="panel-body campo-mensagem">
-					<form>
-						<div class="col-md-12">
-							<div class="input-group">
-								<input type="text" class="form-control" placeholder="Mensagem">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button">></button>
-								</span>
-							</div>
+					<div class="col-md-12">
+						<div class="input-group">
+							<input type="text" class="form-control" placeholder="Mensagem" id="mensagem">
+							<input type="hidden" value="<%=dadosForm.apelido%>" id="apelido" />
+							<span class="input-group-btn">
+								<button class="btn btn-default" type="button" id="enviar_mensagem">></button>
+							</span>
 						</div>
-					</form>
+					</div>
 				</div>
 			</div>
 		</nav>		
 		
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 		<script src="/socket.io/socket.io.js"></script>
+
 		<script>
-			var socket = io('http://localhost');
+
+			var socket = io('http://localhost:80');
+
+			$('#enviar_mensagem').click(function(){
+				socket.emit(
+					'msgParaServidor',
+					{ apelido: $('#apelido').val(), mensagem: $('#mensagem').val() }
+				);
+			});
 
 			socket.on('msgParaCliente', function(data){
 				var html = '';
 				html += '<div class="dialogo">';
-				html += '<h4>'+data.apelido+'</h4>';
-				html += '<h4>'+data.mensagem+'</h4>';
+				html += '<h4>' + data.apelido + '</h4>';
+				html += '<p>' + data.mensagem + '</p>';
 				html += '</div>';
-
-			$('#dialogos').append(html);
-
+				$('#dialogos').append(html);
 			});
+
 		</script>
+		
 	</body>
 </html>
