--- a/mmorpg_got/app/views/jogo.ejs
+++ b/mmorpg_got/app/views/jogo.ejs
@@ -23,7 +23,7 @@
 				});
 
 				$('#btn_suditos').click(function(){
-					$('#msg_erros').hide();
+					$('#msg').hide();
 
 					$.ajax({
 						url: '/suditos',
@@ -35,7 +35,7 @@
 				});
 
 				$('#btn_pergaminho').click(function(){
-					$('#msg_erros').hide();
+					$('#msg').hide();
 					
 					$.ajax({
 						url: '/pergaminhos',
@@ -64,9 +64,15 @@
 
 	    <div class="container">
 
-			<% if(comando_invalido == 'S'){ %>
-				<div class="alert alert-danger" id="msg_erros">
+			<% if(msg == 'A'){ %>
+				<div class="alert alert-danger" id="msg">
 					<strong>Operação Inválida, verifique se todos os campos foram informados!</strong>
+				</div>
+			<% } %>
+
+			<% if(msg == 'B'){ %>
+				<div class="alert alert-info" id="msg">
+					<strong>Ação realizada com sucesso!</strong>
 				</div>
 			<% } %>
 	    	
