--- a/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
+++ b/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
@@ -46,7 +46,11 @@
 								var id = this.value;
 								var id_input_comentario = 'postagem_' + id;
 								var comentario = $('#'+id_input_comentario).val();
-								alert(comentario);
+								
+								var xhr = new XMLHttpRequest();
+								xhr.open('PUT', 'http://localhost:8080/api/' + id);
+								xhr.send();
+								
 							});
 
 						}
